--- a/Streams-DatabaseSample.ipynb
+++ b/Streams-DatabaseSample.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "### 1.3.1 Use a configured external connection\n",
     "\n",
-    "Perform the steps [Connecting to data source](https://docs-icpdata.mybluemix.net/docs/content/SSQNUZ_current/com.ibm.icpdata.doc/igc/t_connect_data_sources.html) \n",
+    "Perform the steps [Connecting to data source](https://www.ibm.com/support/producthub/icpdata/docs/content/SSQNUZ_current/cpd/access/connect-data-sources.html) \n",
     "and create an external configuration for your Db2 connection.\n",
     "\n",
     "List the connections with the cell below:"
